# libdlfind

./: .flake8  .fortls  .gitignore  CMakeLists.txt  LICENSE_bundled.txt  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: build_wheels.yml  draft-pdf.yml  test.yml
docs/: README.md
include/: libdlfind.h
libdlfind/: __init__.py  callback.py  dummies.py  factories.py  function_types.py  lib.py  libdlfind.py
paper/: paper.bib  paper.jats  paper.md
src/: CMakeLists.txt  api.f90  dl-find.f90  dlf_allocate.f90  dlf_checkpoint.f90  dlf_conint.f90  dlf_coords.f90  dlf_dimer.f90  dlf_formstep.f90  dlf_hdlc_interface.f90  dlf_lbfgs.f90  dlf_mpi.f90  dlf_neb.f90  dlf_parallel_opt.f90  dlf_qts.f90  dlf_scalestep.f90  dlf_svnversion.f90  dlf_task.f90  dlf_time.f90  dlf_util.f90  main.f90  mod_api.f90  mod_globals.f90
test/: __init__.py  test_libdlfind.py
